deploy/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/viternetwork: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: APP_PWD
              valueFrom:
                configMapKeyRef:
                  key: APP_PWD
                  name: env
            - name: APP_USER
              valueFrom:
                configMapKeyRef:
                  key: APP_USER
                  name: env
            - name: DB_COLLECTION_NAME
              valueFrom:
                configMapKeyRef:
                  key: DB_COLLECTION_NAME
                  name: env
            - name: DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: DB_NAME
                  name: env
            - name: MONGO_HOSTNAME
              valueFrom:
                configMapKeyRef:
                  key: MONGO_HOSTNAME
                  name: env
            - name: MONGO_INITDB_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MONGO_INITDB_ROOT_PASSWORD
                  name: env
            - name: MONGO_INITDB_ROOT_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: MONGO_INITDB_ROOT_USERNAME
                  name: env
            - name: MONGO_PORT
              valueFrom:
                configMapKeyRef:
                  key: MONGO_PORT
                  name: env
            - name: MONGO_URI
              valueFrom:
                configMapKeyRef:
                  key: MONGO_URI
                  name: env
            - name: TOKEN_KEY
              valueFrom:
                configMapKeyRef:
                  key: TOKEN_KEY
                  name: env
          image: luispereirav/scc:latest
          name: api
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
