deploy/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    viter.service: api
  name: api
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 3000
  selector:
    viter.service: api
status:
  loadBalancer: {}
