deploy/k8s/viternetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: apinetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              viter.network/apinetwork: "true"
  podSelector:
    matchLabels:
      viter.network/apinetwork: "true"
